--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -39,13 +39,13 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --animate-shiny-text: shiny-text 8s infinite;
+  --animate-shiny-text: shiny-text 3s linear infinite;
   @keyframes shiny-text {
-  0%, 90%, 100% {
-    background-position: calc(-100% - var(--shiny-width)) 0;
+    0% {
+      background-position: 0% 0%;
     }
-  30%, 60% {
-    background-position: calc(100% + var(--shiny-width)) 0;
+    100% {
+      background-position: 200% 0%;
     }
   }
   --animate-orbit: orbit calc(var(--duration)*1s) linear infinite
